<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp" >

        <ImageView
            android:id="@+id/photo_draw"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:contentDescription="@string/description"
            android:src="@drawable/people" />

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/photo_draw"
            android:layout_toRightOf="@id/photo_draw"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_preference_first_normal"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    style="@style/base_draw_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name" />

                <TextView
                    android:id="@+id/name_draw"
                    style="@style/base_draw_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_preference_last_normal"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    style="@style/base_draw_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sex" />

                <TextView
                    android:id="@+id/sex_draw"
                    style="@style/base_draw_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_preference_first_normal"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            style="@style/base_draw_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/birthday" />

        <TextView
            android:id="@+id/birth_draw"
            style="@style/base_draw_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_preference_normal"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            style="@style/base_draw_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone" />

        <TextView
            android:id="@+id/phone_draw"
            style="@style/base_draw_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_preference_last_normal"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            style="@style/base_draw_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address" />

        <TextView
            android:id="@+id/addr_draw"
            style="@style/base_draw_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_preference_first_normal"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            style="@style/base_draw_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/job" />

        <TextView
            android:id="@+id/job_draw"
            style="@style/base_draw_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_preference_normal"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            style="@style/base_draw_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/salary" />

        <TextView
            android:id="@+id/salary_draw"
            style="@style/base_draw_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_preference_last_normal"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            style="@style/base_draw_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/holiday" />

        <TextView
            android:id="@+id/holi_draw"
            style="@style/base_draw_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <TextView
        style="@style/base_draw_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/ic_preference_first_normal"
        android:gravity="center"
        android:text="@string/remark" />

    <TextView
        android:id="@+id/remark_draw"
        style="@style/base_draw_textview"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/ic_preference_last_normal"
        android:singleLine="false" />

</LinearLayout>