<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/title_bar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp" >

        <Button
            android:id="@+id/work_front"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentLeft="true"
            android:background="@drawable/previous" />

        <Button
            android:id="@+id/work_next"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/next" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/work_edit"
            style="@style/InputEdit"
            android:hint="@string/work_name"
            android:inputType="text" />

        <EditText
            android:id="@+id/company_edit"
            style="@style/InputEdit"
            android:hint="@string/work_company"
            android:inputType="text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/work_start"
                style="@style/InputEdit"
                android:layout_weight="1"
                android:hint="@string/start_time"
                android:inputType="number" />

            <EditText
                android:id="@+id/work_end"
                style="@style/InputEdit"
                android:layout_weight="1"
                android:hint="@string/end_time"
                android:inputType="number" />

            <EditText
                android:id="@+id/work_score"
                style="@style/InputEdit"
                android:layout_weight="1"
                android:hint="@string/score"
                android:inputType="number" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp" >

            <Button
                android:id="@+id/work_new"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="10dp"
                android:background="@android:drawable/ic_input_add" />

            <Button
                android:id="@+id/work_delete"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="10dp"
                android:background="@android:drawable/ic_delete" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>