<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eeeeee"
    android:orientation="vertical" >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical" >

        <Button
            android:id="@+id/file_save_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_style_white"
            android:paddingLeft="130dp"
            android:paddingRight="130dp"
            android:text="@string/save"
            android:onClick="showFileNameEdit"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/save_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:visibility="gone" >

            <EditText
                android:id="@+id/filename_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/edit_style"
                android:inputType="text"
                android:singleLine="true" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_weight="6"
                android:background="@drawable/btn_style_open"
                android:onClick="fileSave"
                android:text="@string/save"
                android:textSize="12sp" />
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_style_white"
            android:onClick="fileOpen"
            android:paddingLeft="130dp"
            android:paddingRight="130dp"
            android:text="@string/open"
            android:textSize="18sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_style_white"
            android:onClick="paintResume"
            android:paddingLeft="130dp"
            android:paddingRight="130dp"
            android:text="@string/paint"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>