<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/dialog_title"
        android:textSize="20sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dip"
        android:layout_marginBottom="10dip"
        android:layout_marginTop="10dip"
        android:background="#aaaaaa" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <Button
                android:id="@+id/year_add"
                android:layout_width="70dip"
                android:layout_height="35dip"
                android:background="@android:drawable/btn_default_small" />

            <EditText
                android:id="@+id/year_edit"
                android:layout_width="70dip"
                android:layout_height="wrap_content"
                android:inputType="number" />

            <Button
                android:id="@+id/year_plus"
                android:layout_width="70dip"
                android:layout_height="35dip"
                android:background="@android:drawable/btn_default_small" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <Button
                android:id="@+id/month_add"
                android:layout_width="70dip"
                android:layout_height="35dip"
                android:background="@android:drawable/btn_default_small" />

            <EditText
                android:id="@+id/month_edit"
                android:layout_width="70dip"
                android:layout_height="wrap_content"
                android:inputType="number" />

            <Button
                android:id="@+id/month_plus"
                android:layout_width="70dip"
                android:layout_height="35dip"
                android:background="@android:drawable/btn_default_small" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <Button
                android:id="@+id/score_add"
                android:layout_width="70dip"
                android:layout_height="35dip"
                android:background="@android:drawable/btn_default_small" />

            <EditText
                android:id="@+id/score_edit"
                android:layout_width="70dip"
                android:layout_height="wrap_content"
                android:inputType="number" />

            <Button
                android:id="@+id/score_plus"
                android:layout_width="70dip"
                android:layout_height="35dip"
                android:background="@android:drawable/btn_default_small" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dip"
        android:layout_marginBottom="10dip"
        android:layout_marginTop="10dip"
        android:background="#aaaaaa" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/set_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:drawable/btn_default_small"
            android:text="@string/set" />

        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:drawable/btn_default_small"
            android:text="@string/cancel" />
    </LinearLayout>

</LinearLayout>